fixed spacing of the registration options page

--- a/src/styles/registration.css
+++ b/src/styles/registration.css
@@ -171,6 +171,7 @@
 
     .registrationDisclaimerDesktop {
         display: none;
+        height: 1px;
     }
 
     .registrationDisclaimerMobile {
